--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -658,6 +658,16 @@ label.high-margin {
     height: 25px;
 }
 
+.buttonContainer:not(.dragging) {
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out; }
+
+.buttonContainer.dragging {
+  z-index: 800; 
+}
+
+
 .onButton:hover {
     background: #eee;
 }
