--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -32,18 +32,18 @@ p {
 
 #wrapper {
     margin: 0 auto;
-    width: 930px;
+    width: 980px;
 }
 
 #contentwrap {
-    width: 930px;
+    width: 980px;
     margin: 0 auto;
     margin-top: 45px;
     margin-bottom: 45px;
 }
 
 #content {
-    font-size: 18pt;
+    font-size: 17pt;
     background: #FFF;
     border-radius: 10px;
     border: 1px solid 000000;
@@ -73,13 +73,12 @@ p {
 
 .grid {
     position: relative;
-    width: 960px;
 }
 
 .buttonContainer {
     display: inline-block;
     font-size: 40pt;
-    width: 90px;
+    width: 100px;
     height: 100px;
 
     background: #eee;
@@ -132,79 +131,74 @@ p {
     cursor: pointer;
 }
 
-.buttonFace.lightYellow, .buttonFacePreview.lightYellow {
+.buttonFace.lightYellow {
     background: #FFD600;
 }
 
-.buttonFace.yellow, .buttonFacePreview.lightYellow {
+.buttonFace.yellow {
     background: #D8DC6A;
 }
 
-.buttonFace.orange, .buttonFacePreview.orange {
+.buttonFace.orange, e {
     background: #F39C12;
 }
 
-.buttonFace.peach, .buttonFacePreview.peach {
+.buttonFace.peach,  {
     background: #eeaaaa;
 }
 
-.buttonFace.beige, .buttonFacePreview.beige {
+.buttonFace.beige,  {
     background: #C1BCAC;
 }
 
-.buttonFace.green, .buttonFacePreview.green {
+.buttonFace.green,  {
     background: #2ECC71;
 }
 
-.buttonFace.brightGreen, .buttonFacePreview.brightGreen {
+.buttonFace.brightGreen {
     background: #D1DEDE;
 }
 
-.buttonFace.aqua, .buttonFacePreview.aqua {
+.buttonFace.aqua, {
     background: #64A6BD;
 }
 
-.buttonFace.blue, .buttonFacePreview.blue {
+.buttonFace.blue, {
     background: #A9CEF4;
 }
 
-.buttonFace.red, .buttonFacePreview.red {
+.buttonFace.red {
     background: #DF928E;
 }
 
-.buttonFace.pink, .buttonFacePreview.pink {
+.buttonFace.pink, {
     background: #ffbbdd;
 }
 
-.buttonFace.darkPink, .buttonFacePreview.darkPink {
+.buttonFace.darkPink {
     background: #ffccdd;
 }
 
-.buttonFace.purple, .buttonFacePreview.purple {
+.buttonFace.purple {
     background: #ADA7C9;
 }
 
-.buttonFace.brown, .buttonFacePreview.brown {
+.buttonFace.brown {
     background: #888;
 }
 
-.buttonFace.small, .buttonFacePreview.small {
-    font-size: 40pt;
-    width: 90px;
-    height: 100px;
-}
-
-.buttonFace.large, .buttonFacePreview.large {
+.large {
     font-size: 80pt;
-    width:190px;
-    height:210px;
+    width:220px;
+    height:220px;
+    padding-top: 30px;
 }
 
-.buttonContainer:hover, .buttonFacePreview:hover {
+.buttonContainer:hover {
 /*    background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed) );
     background:-moz-linear-gradient( center top, #dfdfdf 5%, #ededed 100% );
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed');*/
-    background-color:#999;
+    background-color: rgba(0, 0, 0, .3) !important;
 }
 
 .buttonFace:active, .buttonFacePreview:active {
@@ -243,18 +237,10 @@ p {
     padding-top: 10px;
 }
 
-.smaller {
-    font-size:10px;    
-    line-height:25px;
-    height:70px;
-    width:80px;
-}
-
-.smallest {
-    font-size:7px;    
-    line-height:20px;
-    height:50px;
-    width:60px;
+.small {
+    font-size:20px;
+    height:40px;
+    width:40px;
 }
 
 .tiny {
@@ -659,14 +645,17 @@ label.high-margin {
 }
 
 .buttonContainer:not(.dragging) {
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out; }
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out; }
 
 .buttonContainer.dragging {
   z-index: 800; 
 }
 
+.draggableTab > a:hover {
+    mouse: move;
+}
 
 .onButton:hover {
     background: #eee;
@@ -714,4 +703,8 @@ label.high-margin {
 
 .js-avoidClicks {
     pointer-events:none;
+}
+
+.ui-tabs .ui-tabs-panel {
+    padding: 20px;
 }
