--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -717,6 +717,23 @@ label.high-margin {
     opacity: 0;
 }
 
+.deleteOnButton {
+    -webkit-border-top-left-radius:9px;
+    -moz-border-radius-topleft:9px;
+    border:none;
+    padding-top:5px;
+    padding-left: 10px;
+    position: absolute;
+    color: #FF3333;
+    cursor: pointer;
+    width: 20px;
+    top: 0;
+    left: 0;
+    font-size: 10pt;
+    text-align: center;
+    opacity: 0;    
+}
+
 .js-avoidClicks {
     pointer-events:none;
 }
