--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -718,9 +718,8 @@ label.high-margin {
 }
 
 .deleteOnButton {
-    -webkit-border-top-left-radius:9px;
-    -moz-border-radius-topleft:9px;
     border:none;
+    background: transparent;
     padding-top:5px;
     padding-left: 10px;
     position: absolute;
@@ -731,9 +730,33 @@ label.high-margin {
     left: 0;
     font-size: 10pt;
     text-align: center;
-    opacity: 0;    
+    opacity: 0;
+  /* WebKit (Safari/Chrome) Only */
+  -webkit-text-stroke: 1px black;
+  
+  /* If we weren't using text-shadow, we'd set a fallback color
+     and use this to set color instead
+    -webkit-text-fill-color: white; */
+  
+  color: white;
+  
+  text-shadow:
+    1px 1px 0 #000,
+    /* Simulated effect for Firefox and Opera
+       and nice enhancement for WebKit */
+   -1px -1px 0 #000,  
+    1px -1px 0 #000,
+   -1px  1px 0 #000,
+    1px  1px 0 #000;
 }
 
+.deleteOnButton {
+    background: transparent;
+}
+
+.deleteOnButton:hover {
+    background: transparent;
+}
 .js-avoidClicks {
     pointer-events:none;
 }
