--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -655,11 +655,26 @@ label.high-margin {
 }
 
 .onButton {
-    border: 1px solid #999;
-    border-color: #ccc;
-    width:40px;
-    background-color:#eee;
+    width:30px;
+    background-color:transparent;
     height: 25px;
+    padding: 5px;
+    position: absolute;
+    cursor: pointer;
+    font-size: 10pt;
+    text-align: center;
+    opacity: 0;
+
+    text-shadow:
+    /* Outline 1 */
+    -1px -1px 0 #000000,
+    1px -1px 0 #000000,
+    -1px 1px 0 #000000,
+    1px 1px 0 #000000,  
+    -2px 0 0 #000000,
+    2px 0 0 #000000,
+    0 2px 0 #000000,
+    0 -2px 0 #000000, 
 }
 
 .buttonContainer:not(.dragging) {
@@ -680,81 +695,31 @@ label.high-margin {
 }
 
 .sizeOnButton {
-    -webkit-border-top-right-radius:9px;
-    -moz-border-radius-topright:9px;
-    border-top-right-radius:9px;
-    -webkit-border-bottom-left-radius:9px;
-    -moz-border-radius-bottomleft:9px;
-    border-bottom-left-radius:9px;
-    border-color: #ccc;
-    padding: 5px;
-    position: absolute;
-    cursor: pointer;
-    color: #000;
     bottom: 0;
-    left: 0;
-    font-size: 10pt;
-    text-align: center;
-    opacity: 0;
+    right: 0;
 }
 
 .editOnButton {
-    -webkit-border-top-left-radius:9px;
-    -moz-border-radius-topleft:9px;
-    border-top-left-radius:9px;
-    -webkit-border-bottom-right-radius:9px;
-    -moz-border-radius-bottomright:9px;
-    border-bottom-right-radius:9px;
-    border-color: #ccc;
-    padding: 5px;
-    position: absolute;
-    color: #000;
-    cursor: pointer;
     bottom: 0;
-    right: 0;
-    font-size: 10pt;
-    text-align: center;
-    opacity: 0;
+    left: 0;
 }
 
-.deleteOnButton {
-    border:none;
-    background: transparent;
-    padding-top:5px;
-    padding-left: 10px;
-    position: absolute;
-    color: #FF3333;
-    cursor: pointer;
+.editSubmenuOnButton {
     width: 20px;
     top: 0;
+    right: 0;
+}
+
+.deleteOnButton {
+    top: 0;
     left: 0;
-    font-size: 10pt;
-    text-align: center;
-    opacity: 0;
-  /* WebKit (Safari/Chrome) Only */
-  -webkit-text-stroke: 1px black;
-  
-  /* If we weren't using text-shadow, we'd set a fallback color
-     and use this to set color instead
-    -webkit-text-fill-color: white; */
-  
-  color: white;
-  
-  text-shadow:
-    1px 1px 0 #000,
-    /* Simulated effect for Firefox and Opera
-       and nice enhancement for WebKit */
-   -1px -1px 0 #000,  
-    1px -1px 0 #000,
-   -1px  1px 0 #000,
-    1px  1px 0 #000;
 }
 
 .deleteOnButton {
     background: transparent;
 }
 
-.deleteOnButton:hover {
+.onButton:hover {
     background: transparent;
 }
 .js-avoidClicks {
