--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -665,17 +665,11 @@ label.high-margin {
     text-align: center;
     opacity: 0;
 
-    -webkit-text-stroke: 1px black;
-    text-shadow:
-    /* Outline 1 */
-    -1px -1px 0 #000000,
-    1px -1px 0 #000000,
-    -1px 1px 0 #000000,
-    1px 1px 0 #000000,  
-    -2px 0 0 #000000,
-    2px 0 0 #000000,
-    0 2px 0 #000000,
-    0 -2px 0 #000000, 
+    text-shadow: 1px 1px 0 #000, 
+                -1px -1px 0 #000, 
+                1px -1px 0 #000,
+                -1px 1px 0 #000, 
+                3px 3px 5px #333;
 }
 
 .buttonContainer:not(.dragging) {
