--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -659,17 +659,14 @@ label.high-margin {
     background-color:transparent;
     height: 25px;
     padding: 5px;
+    margin-bottom: 5px;
     position: absolute;
     cursor: pointer;
-    font-size: 10pt;
+    font-size: 12pt;
     text-align: center;
     opacity: 0;
 
-    text-shadow: 1px 1px 0 #000, 
-                -1px -1px 0 #000, 
-                1px -1px 0 #000,
-                -1px 1px 0 #000, 
-                3px 3px 5px #333;
+    text-shadow: 1px 1px 2px black, 0 0 1em black, 0 0 0.2em black;
 }
 
 .buttonContainer:not(.dragging) {
