--- a/portal/frontend/frontend/static/css/splash.css
+++ b/portal/frontend/frontend/static/css/splash.css
@@ -449,10 +449,10 @@ label.high-margin {
     background-color: #eee;
     color: #999;
     line-height: 2em;
-    border: 1px solid #dcdcdc;
+    border: 1px solid #999;
     display: inline-block;
     height: 31px;
-    width: 114px;
+    width: 150px;
     margin-top: 5px;
     float:right;
     background-color:#eee;
